--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
@@ -46,6 +46,7 @@
                         >
                     </div>
                     <img
+                       [ngClass]="{inactiveButton:disableDeletOption}"
                         src="kitchen-trash-bin.png"
                         *ngIf="fileDataUrl"
                         class="deleteIcon"
