--- a/src/app/components/components-for-logged-in-users/draft-recipe/draft-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/draft-recipe/draft-recipe.component.html
@@ -1,11 +1,13 @@
-<div class="gridItems" *ngIf="!loading">
-    <div *ngFor="let dat of data" class="itmes">
+<div class="gridItems">
+    <div *ngFor="let dat of data" class="outerDiv">
+      <div class="imageItemDiv">
         <img src="deafultRecipe.png" id="defualtImage" *ngIf="!dat.image_url">
-        <img src="{{dat.image_url}}" *ngIf="dat.image_url" (click)="editDraft(dat.id)" class="imageOfDish">
-        <span>{{dat.name}}</span>
+        <img [ngSrc]="url(dat.image_url)" *ngIf="dat.image_url"  fill="" priority (click)="editDraft(dat.id)" class="imageOfDish">
+      </div>
+        <span class="itemName">{{dat.name}}</span>
         <div class="buttons">
-          <button (click)="deleteDraft(dat.id)">Remove</button>
-          <button (click)="editDraft(dat.id)">Edit</button>
+          <button (click)="deleteDraft(dat.id)"  class="redClass">Remove</button>
+          <button (click)="editDraft(dat.id)" class="publish">Edit</button>
         </div>
     </div>
     </div>
