--- a/src/app/components/components-for-logged-in-users/saved-recipe/saved-recipe.component.css
+++ b/src/app/components/components-for-logged-in-users/saved-recipe/saved-recipe.component.css
@@ -8,11 +8,14 @@
     box-shadow: 0px 0px 8px 2px  rgb(177, 176, 176);
     border-radius: 5px;
 }
-.imageOfDish{
+.imageItemDiv{
     width: 300px;
     height: 200px;
     border-radius: 5px;
     object-fit: fill;
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
 }
 .itemName{
     display: block;
