--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.css
@@ -1,6 +1,14 @@
 .deleteIcon {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 50px;
+}
+.deleteIcon:hover{
+    background-color: red;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.1s linear;
 }
 .eachStepDiv {
     display: block;
@@ -8,7 +16,7 @@
     width: max-content;
     
 }
-
+ 
 .fomrsSection {
     display: block;
 
@@ -40,7 +48,8 @@ textarea:focus{
 }
 .uploadedImage {
     width: 250px;
-    height: 200px;
+    height: 100%;
+    border-radius: 5px;
 }
 .uploadProgress {
     position: absolute;
@@ -52,9 +61,10 @@ textarea:focus{
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 20px;
-    font-weight: 600;
-    background-color: rgba(0, 0, 0, 0.459);
+    font-size: 12px;
+   
+    border-radius: 5px;
+    background-color: var(--error-background-color)
 }
 .imagePreviewOuterDiv {
     display: flex;
@@ -90,6 +100,8 @@ input:focus{
 }
 .fileUploader{
     border-bottom: 0px;
+}.inactiveButton{
+    background-color: yellow;
 }
 @media only screen and (max-width: 964px) {
     .fomrsSection {
