--- a/src/app/components/components-for-logged-in-users/account/mobile-option-bar/mobile-option-bar.component.html
+++ b/src/app/components/components-for-logged-in-users/account/mobile-option-bar/mobile-option-bar.component.html
@@ -1,2 +1,2 @@
 <img src="options.png" (click)="toogleDisplayState(true)">
-<app-mobile-nav-bar-links *ngIf="shouldNavComponentDispaly" (toogleState)="toogleDisplayState($event)"></app-mobile-nav-bar-links>
+<app-mobile-nav-bar-links *ngIf="display" (toogleState)="toogleDisplayState($event)"></app-mobile-nav-bar-links>
