--- a/src/app/components/components-for-logged-in-users/account/account.component.css
+++ b/src/app/components/components-for-logged-in-users/account/account.component.css
@@ -5,13 +5,13 @@
     grid-template-columns: max-content 1fr;
     grid-template-rows: 1;
     margin: 20px auto;
- 
+    position: relative;
 }
 .contnetDiv{
     width: 100%;
     overflow: scroll;
     display: block;
-   
+    z-index: 1;
 }
 .mobileNavBar{
     display: none;
@@ -26,7 +26,7 @@
     }
     .mobileNavBar{
         display: block;
-
+        z-index: 2;
     }
     
 }
