--- a/src/app/components/components-for-logged-in-users/profile/profile.component.css
+++ b/src/app/components/components-for-logged-in-users/profile/profile.component.css
@@ -13,7 +13,10 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    border: 2px solid var(--color-button-orange);
+    z-index: 2;
+    display: block;
+    padding: 0px;
+    border: 4px solid var(--color-button-orange);
 }
 .uploadIcon{
    border-radius: 50%;
@@ -25,10 +28,12 @@
     bottom: 0px;
     right: 0px;
     left: 0px;
+    z-index: 2;
     background-color: var(--error-background-color);
 }
 .cameraIcon{
-    width: 20px;
+    width: 50px;
+    height: 50px;
     padding: 5px;
     border-radius: 5px;
     background-color: white;
