--- a/src/app/components/components-for-logged-in-users/profile/profile.component.html
+++ b/src/app/components/components-for-logged-in-users/profile/profile.component.html
@@ -3,7 +3,7 @@
         <div class="uploadIcon" *ngIf="showUploadIconState">
         <img src="camera.png" class="cameraIcon">
         </div>
-     <img src="userDetails.url" *ngIf="loading" />
+     <img [src]="userDetails.url" *ngIf="loading" />
     </div>
     <div class="userName">
         <span class="userNameHeading">User Name: </span><span class="userNameData">{{userDetails.name}}</span>
@@ -14,5 +14,4 @@
     </div>
 </div>
 <app-error-image *ngIf="isThereError"></app-error-image>
-<app-upload-thumbnail [secondCancelButton]="true" [lableText]="'Upload Image'" [userDetails]="userDetails" *ngIf="inputThumbnail" [uploadThumbnail]="false" text="Set Profile Icon" [formGroup]="formGroup" (toogleThumbnail)="emmitedThumbnailValueStatus()"></app-upload-thumbnail>
 <app-delete-account-confirmation [deleteAccountPopUp]="displayDeleteConfirmation" *ngIf="showConfirmation"></app-delete-account-confirmation>
