--- a/src/app/components/components-for-logged-in-users/account/left-options-bar/left-options-bar.component.html
+++ b/src/app/components/components-for-logged-in-users/account/left-options-bar/left-options-bar.component.html
@@ -1,8 +1,8 @@
 <div>
-<div *ngFor="let option of options" class="options">
-    <span [routerLink]="option.nav" routerLinkActive="ac">{{
+<div *ngFor="let option of options" class="options"[routerLink]="option.nav" routerLinkActive="active" [ngClass]="option.class">
+    <span >{{
         option.name
     }}</span>
     <img src="{{ option.url }}" />
 </div>
-</div>
+</div> 
