--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/upload-thumbnail/upload-thumbnail.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/upload-thumbnail/upload-thumbnail.component.html
@@ -34,7 +34,7 @@
 
     </div>
     <div class="buttons" *ngIf="secondCancelButton">
-      <button (click)="cancelShowPopup()" *ngIf="disableDeletOptionOfUserImg" [ngClass]="{inactiveButton:!disableDeletOption}" class="save">Cancel</button>
+      <button (click)="cancelShowPopup()" *ngIf="disableDeletOptionOfUserImg" [ngClass]="{inactiveButton:showProgress}" class="save">Cancel</button>
     </div>
     
 </div>
