--- a/src/app/components/components-for-logged-in-users/draft-recipe/draft-recipe.component.css
+++ b/src/app/components/components-for-logged-in-users/draft-recipe/draft-recipe.component.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
 }
 .imageItemDiv{
-    width: 300px;
+    width: 100%;
     height: 200px;
     border-radius: 5px;
     object-fit: fill;
@@ -135,6 +135,7 @@
 @media only screen and (max-width:368px) {
     .gridItems{
         grid-template-columns: repeat(1,max-content); 
+        padding: 4px;
     }
   
   .outerDiv{
