--- a/src/app/components/components-for-logged-in-users/published-recipe/published-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/published-recipe/published-recipe.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let dat of data" class="outerDiv">
       <div class="imageItemDiv">
         
-        <img [ngSrc]="url(dat.thumbnail)" fill="" priority="" (click)="nav(dat.id)" class="imageOfDish">
+        <img [ngSrc]="url(dat.thumbnail)" fill priority (click)="nav(dat.id)" class="imageOfDish">
       </div>
         <span class="itemName">{{dat.name}}</span>
         <div class="buttons">
