--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -6,7 +6,7 @@
     <span class="footer">Sign-Up Using!</span>
     <div class="images">
     
-        <a [href]="googleUrl"><img src="google.png"></a>
+        <!-- <a [href]="googleUrl"><img src="google.png"></a> -->
         <img src="twitter.png" (click)="navToX()">
     </div>
 </form>
