--- a/src/app/components/components-for-logged-in-users/account/account.component.css
+++ b/src/app/components/components-for-logged-in-users/account/account.component.css
@@ -12,9 +12,10 @@
 .contnetDiv{
     width: 100%;
     overflow: scroll;
-    display: block;
+    display: flex;
     z-index: 1;
-  
+   
+
 }
 :host{
     display: block;
