Started working on planner First taget: Add the icon  navigation bar

--- a/src/app/components/planner/planner.component.html
+++ b/src/app/components/planner/planner.component.html
@@ -1,2 +1,5 @@
 <app-top-bar></app-top-bar>
-<app-work-area></app-work-area>
+<div class="router-outlet">
+<router-outlet></router-outlet>
+</div>
+<app-plus-icon></app-plus-icon>
