--- a/src/app/components/planner/inner-components/top-bar/top-bar.component.css
+++ b/src/app/components/planner/inner-components/top-bar/top-bar.component.css
@@ -1,8 +1,9 @@
 :host{
     display: flex;
     justify-content: space-between;
-    background-color: aqua;
+    padding: 5px;
     margin-top: 0px;
+    box-shadow: 0px 0px 20px 1px var(--white-color-top-bar-drop-down-shadow);
 }
 img{
     width: 100px;
