--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,9 @@
     --creator-write-validInput:rgb(150, 150, 13);
     --creator-write-invalid:red;
     --color-button-orange:orange;
-    --error-background-color:rgba(0, 0, 0, 0.856)
+    --error-background-color:rgba(0, 0, 0, 0.856);
+    --white-color-box-shadow:rgb(177, 176, 176);
+    --white-color-top-bar-drop-down-shadow:rgb(214, 214, 214);
 }
 body{
     padding: 0px;
