--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
     --error-background-color:rgba(0, 0, 0, 0.856);
     --white-color-box-shadow:rgb(177, 176, 176);
     --white-color-top-bar-drop-down-shadow:rgb(214, 214, 214);
+    --box-shadow:orange;
 }
 body{
     padding: 0px;
@@ -43,4 +44,5 @@ button:focus{
 .redClass:hover{
     background-color: red;
 }
+
 
