--- a/src/app/components/planner/inner-components/home/praent-component/praent-component.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/praent-component.component.css
@@ -1,5 +1,6 @@
 :host{
-    display: block;
-    background-color: blue;
-    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
