Not much of styling but now editing the component store to work properly

--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/days/days.component.html
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/days/days.component.html
@@ -1,4 +1,4 @@
-<div>
-    <div class="innerItems"></div>
+<div (click)="editIndividualDay()">
+    <div class="innerItems">{{mealLable.mealName}}</div>
     
 </div>
