Made a simple component and testing try No task achived till yet

--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-time-day/edit-time-day.component.html
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-time-day/edit-time-day.component.html
@@ -1,3 +1,4 @@
-<span>Current Value</span>
-<input placeholder="Lable" [(ngModel)]="vlaueOfInput">
+<span>Current Value:{{day}}</span>
+<input placeholder="Lable" [(ngModel)]="vlaueOfInput" (keydown)="logger($event)">
+
 <button (click)="setTimeOrDate()">Okay</button>
