Made the day selection and edit title:Taks remaining are set Lable case Undefined,edit Meals,Http status indecator

--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/days-banner/days-banner.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/days-banner/days-banner.component.css
@@ -1,4 +1,4 @@
 :host{
-    width: 100px;
-    height: 100px;
+    width:var(--each-box-width-default);
+    height: var(--each-box-width-default);
 }
