--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-time-day/edit-time-day.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/edit-time-day/edit-time-day.component.css
@@ -6,3 +6,19 @@
     padding: 0px 10px;
     height: 100%;
 }
+.topSpan{
+    margin: 10px 0px 0px 0px;
+    font-size: 20px;
+    font-weight: 700;
+}
+input{
+    display: block;
+    margin: 10px 0px;
+
+}
+input:focus{
+    outline: 1px solid black;
+}
+button{
+    margin: 10px 0px 20px 0px;
+}
