--- a/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/pop-up.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/work-area-component/pop-up/pop-up.component.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .outerDiv{
     display: flex;
@@ -15,7 +16,9 @@
      border-radius: 5px;
      overflow: hidden;
     background-color: white;
-    height: 200px;
+    height: max-content;
+    padding-bottom: 10px;
+    width: 300px;
     
 }
 .hideButton{
