--- a/src/app/components/planner/inner-components/home/praent-component/praent-component.component.css
+++ b/src/app/components/planner/inner-components/home/praent-component/praent-component.component.css
@@ -1,6 +1,11 @@
 :host{
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     width: 100%;
+    height: 100%;
+    padding-bottom: 10px;
+    overflow: scroll;
+    position:relative;
+    
 }
